# pendector

./: .tagpr  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  README.md  config.toml.example
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-checks.yml  release.yml
docs/: DEVELOPMENT_PLAN.md  RUST_PRACTICES.md
src/: config.rs  error.rs  exclude.rs  lib.rs  main.rs
src/cli/: mod.rs
src/core/: mod.rs  repo.rs  scanner.rs
src/git/: status.rs
src/notify/: slack.rs
src/output/: formatter.rs  mod.rs
tests/: cli.rs
