[package]
name = "pendector"
version = "0.1.0"
authors = ["thaim"]
description = "Detect and manage pending changes across your local repositories"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
walkdir = "2.5"
colored = "3.0"
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"
predicates = "3.0"
