[package]
name = "pendector"
version = "0.1.0"
authors = ["thaim"]
description = "Detect and manage pending changes across your local repositories"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
walkdir = "2.5"
colored = "3.0"
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
indicatif = "0.17"
toml = "0.8"
dirs = "5.0"
shellexpand = "3.1"
ignore = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"
predicates = "3.0"
