[package]
name = "pendector"
version = "0.3.1"
authors = ["thaim"]
description = "Detect and manage pending changes across your local repositories"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
walkdir = "2.5"
colored = "3.0"
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.11"
indicatif = "0.18"
toml = "1.0"
dirs = "6.0"
ignore = "0.4"
ureq = "3"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"
predicates = "3.1"
